--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
  .button {
-    background-color: dlack;
+    background-color: transparent;
     border: none;
-    text-align: center;
+    text-align: justify;
 }
