--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
- @font-face {
+@font-face {
     font-family: 'IBMPlexMono';
     src: url(./fonts/IBMPlexMono-Bold.ttf);
     font-weight: 700px;
@@ -8,9 +8,16 @@
     src: url(./fonts/IBMPlexMono-Regular.ttf);
     font-weight: 400;
  }
+ .allmain {
+    width: 1024px;
+    margin: 0 auto;
+ }
  header {
-    --background-image: url("../img/cover-image-dark.svg");
+    background-image: url("./image.png");
     margin: 0;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
  }
  .button {
     background-color: transparent;
@@ -18,6 +25,9 @@
     color: #ff0070;
     font-size: 18px;
     font-family: 'IBMPlexMono';
+    margin-top: 20px;
+    margin-right: 25px;
+    text-align: center;
  }
 .navigation {
     display: flex;
@@ -35,6 +45,8 @@
     color: #ff0070;
     font-size: 18px;
     font-family: 'IBMPlexMono';
+    margin-top: 20px;
+    margin-right: 30px;
 }
 .title {
     font-family: 'IBMPlexMono';
@@ -62,130 +74,271 @@ h1 {
     position: absolute;
     width: 33px;
     height: 26px;
-    left: 943px;
+    padding-left: 943px;
     top: 20px;
     font-family: 'IBMPlexMono';
     font-style: normal;
     font-weight: 400px;
     font-size: 18px;
     line-height: 25px;
-    text-align: center;
+    text-align: right;
     color: #ff0070;
 }
 .ellipse {
 width: 9px;
 height: 9px;
 position: absolute;
-left: 986px;
+margin-left: 986px;
 top: 28px;
 background: #ff0070;
 border-radius: 50%;
 box-shadow:  0 0 4px 2px #ff0070;
 font-family: 'IBMPlexMono';
-    
 } 
 p {
     margin: 0;
 }
 .content {
-background-color: #ff0070;
-color: #000028; 
-width: 491px;
-height: 71px;
-margin-top: 563px;
-margin-left: 513px;
-font-size: 18px;
-font-family: 'IBMPlexMono';
-font-weight: 700;
-line-height: 23.4px;
-}
-.contenta {
-width: 314.96px;
-height: 47px;
+    background-color: #ff0070;
+    color: #000028; 
+    width: 491px;
+    height: 71px;
+    margin-top: 563px;
+    margin-left: 513px;
+    font-size: 18px;
+    font-family: 'IBMPlexMono';
+    font-weight: 700;
+    line-height: 23.4px;
+    }
+    .contenta {
+    width: 314.96px;
+    height: 47px;
+    left: 20px;
+    gap: 0px;
+    opacity: 0px;
+    font-family: 'IBMPlexMono';
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 23.4px;
+    text-align: left;
+    margin-top: 50px;
+    color: #FF0070;
+    }
+    h2 {
+    display: flex;
+    width: 649px;
+    height: 23px;
+    padding-left:  354.89px;  
+    font-family: 'IBMPlexMono';
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 23.4px;
+    text-align: left;
+    color: #000028;
+    background-color: #FF0070;
+    }
+    .text {
+    width: 648.92px;
+    height: 211px;
+    padding-top: 0;
+    padding-left: 354.89px;
+    gap: 0px;
+    opacity: 0px;
+    font-family: 'IBMPlexMono';
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 23.4px;
+    text-align: left;
+    color: #F1B2CE;
+    }
+    .dofamin {
+    padding-top: 0;
+    width: 648.92px;
+    height: 23px;
+    left: 355.08px;
+    gap: 0px;
+    opacity: 0px;
+    font-family: 'IBMPlexMono';
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 23.4px;
+    text-align: left;
+    color: #000028;
+    padding-top: 20px;
+    }
+    .texta {
+    width: 648.92px;
+    height: 211px;
+    padding-left: 355.08px;
+    gap: 0px;
+    opacity: 0px;
+    font-family: 'IBMPlexMono';
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 23.4px;
+    text-align: left;
+    color: #F1B2CE;
+    }
+    .title3 {
+    width: 315px;
+    height: 47px;
+    left: 20px;
+    gap: 0px;
+    font-family: 'IBM Plex Mono';
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 23.4px;
+    text-align: left;
+    color: #FF0070;
+    background-color: #000028;
+    width: 100%;
+    }
+    .mnogozadachnost h3 {
+    width: 315px;
+    height: 23px;
+    gap: 0;
+    font-family: 'IBM Plex Mono';
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 23.4px;
+    text-align: left;
+    color: #000028;
+    width: 315px;
+    height: 23px;
+    top: 67px;
+    left: 20px;
+    gap: 0;
+    background-color: #FF0070;
+    }
+    .mnogozadachnost h3 {
+    width: 315px;
+    height: 23px;
+    gap: 0;
+    font-family: 'IBM Plex Mono';
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 23.4px;
+    text-align: left;
+    color: #000028;
+    width: 315px;
+    height: 23px;
+    top: 67px;
+    left: 20px;
+    gap: 0;
+    background-color: #FF0070;
+    }
+    .mnogozadachnost p {
+    width: 315px;
+    height: 351px;
+    padding-top: 10px;
+    gap: 0px;
+    font-family: 'IBM Plex Mono';
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 23.4px;
+    text-align: left;
+    color: #F1B2CE;
+    }
+    .eat h3 {
+    width: 315px;
+    height: 23px;
+    left: 335px;
+    gap: 0;
+    font-family: 'IBM Plex Mono';
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 23.4px;
+    text-align: left;
+    color: #000028;
+    background-color: #FF0070;
+    width: 315px;
+    height: 23px;
+    top: 67px;
+    left: 355px;
+    gap: 0;
+    
+    }
+    .eat p {
+    width: 315px;
+    height: 328px;
+    top: 33px;
+    left:
+    335px;
+    gap:
+    0;
+    font-family: 'IBM Plex Mono';
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 23.4px;
+    text-align: left;
+    color: #F1B2CE;
+    }
+    .gadzheti h3 {
+    width: 315px;
+    height: 23px;
+    left: 670px;
+    gap: 0;
+    font-family: 'IBM Plex Mono';
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 23.4px;
+    text-align: left;
+    color: #000028;
+    width: 315px;
+    height: 23px;
+    top: 67px;
+    left: 689px;
+    gap: 0;
+    background-color: #FF0070;
+    }
+    .gadzheti p {
+    width: 315px;
+    height: 398px;
+    top: 33px;
+    left: 670px;
+    gap: 0;
+    font-family: 'IBM Plex Mono';
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 23.4px;
+    text-align: left;
+    color: #F1B2CE;
+    }
+    .container2 {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: Fixed 984px;
+    height: 431px;
+    top: 67px;
+    left: 20px;
+    gap: 20px;
+    opacity: 0px;
+    background-color: #000028;
+    }
+    .container {
+        background-color: #000028;
+        background-size: cover;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+.group p {
+width: 315px;
+height: 98px;
 left: 20px;
-gap: 0px;
-opacity: 0px;
-font-family: 'IBMPlexMono';
+gap: 0;
+font-family: 'IBM Plex Mono';
 font-size: 18px;
 font-weight: 700;
 line-height: 23.4px;
 text-align: left;
-margin-top: 50px;
 color: #FF0070;
 }
-h2 {
-display: flex;
+.group h3 {
+    display: flex;
 width: 649px;
 height: 23px;
-padding-left:  354.89px;  
-font-family: 'IBMPlexMono';
-font-size: 18px;
-font-weight: 700;
-line-height: 23.4px;
-text-align: left;
-color: #000028;
-background-color: #FF0070;
-}
-.text {
-width: 648.92px;
-height: 211px;
-padding-top: 0;
-padding-left: 354.89px;
-gap: 0px;
-opacity: 0px;
-font-family: 'IBMPlexMono';
-font-size: 18px;
-font-weight: 400;
-line-height: 23.4px;
-text-align: left;
-color: #F1B2CE;
-}
-.dofamin {
-padding-top: 0;
-width: 648.92px;
-height: 23px;
-left: 355.08px;
-gap: 0px;
-opacity: 0px;
-font-family: 'IBMPlexMono';
-font-size: 18px;
-font-weight: 700;
-line-height: 23.4px;
-text-align: left;
-color: #000028;
-}
-.texta {
-padding-top: 0;
-width: 648.92px;
-height: 211px;
-padding-left: 355.08px;
-gap: 0px;
-opacity: 0px;
-font-family: 'IBMPlexMono';
-font-size: 18px;
-font-weight: 400;
-line-height: 23.4px;
-text-align: left;
-color: #F1B2CE;
-}
-.title3 {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-width: 315px;
-height: 47px;
-left: 20px;
-gap: 0px;
-font-family: 'IBM Plex Mono';
-font-size: 18px;
-font-weight: 700;
-line-height: 23.4px;
-text-align: left;
-color: #FF0070;
-}
-.mnogozadachnost {
-width: 315px;
-height: 23px;
 gap: 0;
 font-family: 'IBM Plex Mono';
 font-size: 18px;
@@ -193,55 +346,33 @@ font-weight: 700;
 line-height: 23.4px;
 text-align: left;
 color: #000028;
-width: 315px;
+background-color: #FF0070;
+width: 649px;
 height: 23px;
-top: 67px;
-left: 20px;
+left: 355px;
 gap: 0;
-background-color: #FF0070;
 }
-.content3 {
-width: 315px;
-height: 351px;
-padding-top: 10px;
-gap: 0px;
-font-family: 'IBM Plex Mono';
-font-size: 18px;
-font-weight: 400;
-line-height: 23.4px;
-text-align: left;
-color: #F1B2CE;
-}
-.eat {
+.group {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
-width: 315px;
-height: 23px;
-left: 335px;
-gap: 0px;
-opacity: 0px;
-font-family: IBM Plex Mono;
-font-size: 18px;
-font-weight: 700;
-line-height: 23.4px;
-text-align: left;
-background-color: #FF0070;
 }
-.content4 {
-display: flex;
-flex-direction: column;
-flex-wrap: wrap;
-width: 315px;
-height: 328px;
-top: 33px;
-left: 335px;
-gap: 0px;
-opacity: 0px;
+.contentb h3 {
+width: 649px;
+height: 23px;
+top: 43px;
+gap: 0;
 font-family: 'IBM Plex Mono';
 font-size: 18px;
 font-weight: 400;
 line-height: 23.4px;
 text-align: left;
+color: #000028;
+background-color: #FF0070;
+width: 649px;
+height: 23px;
+top: 43px;
+left: 355px;
+gap: 0;
+}
 
-}
