--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
  .allmain {
     width: 1024px;
     margin: 0 auto;
+    font-family: 'IBMPlexMono' sans-serif;
  }
  header {
     background-image: url("./image.png");
@@ -28,6 +29,7 @@
     margin-top: 20px;
     margin-right: 25px;
     text-align: center;
+    cursor: pointer;
  }
 .navigation {
     display: flex;
@@ -48,29 +50,34 @@
     margin-top: 20px;
     margin-right: 30px;
 }
-.title {
-    font-family: 'IBMPlexMono';
-    width: 750px;
-    height: 130px;
-    background-color: transparent;
-    font-family: 'IBMPlexMono';
+.title h1 {
+position: flex;
+width: 759px;
+height: 130px;
+left: 0;
+top: cacl(50% - 130px/2);
+font-style: bold;
+font-weight: 700;
+font-size: 157px;
+line-height: 82.5%;
+color: #DB00FF;
+text-shadow: 4px 4px #ff0070;
+font-family: 'IBMPlexMono';
+margin-top: 300px;
+font-size: 157px;
+font-weight: 700;
+line-height: 129.53px;
+text-align: left;
+width: 750px;
+height: 130px;
+background-color: transparent;
+width: 1024px;
 }
-h1 {
-    position: absolute;
-    width: 759px;
-    height: 130px;
-    left: 0;
-    top: cacl(50% - 130px/2);
-    font-style: bold;
-    font-weight: 700;
-    font-size: 157px;
-    line-height: 82.5%;
-    color: #DB00FF;
-    text-shadow: 4px 4px #ff0070;
-    font-family: 'IBMPlexMono';
-    margin-top: 300px;
+.globalinfo {
+    width: 1024px;
+    height: 465px;
 }
-.rec {
+.title p {
     position: absolute;
     width: 33px;
     height: 26px;
@@ -99,16 +106,18 @@ p {
     margin: 0;
 }
 .content {
-    background-color: #ff0070;
-    color: #000028; 
-    width: 491px;
-    height: 71px;
-    margin-top: 563px;
-    margin-left: 513px;
-    font-size: 18px;
-    font-family: 'IBMPlexMono';
-    font-weight: 700;
-    line-height: 23.4px;
+display: block;
+background-color: #ff0070;
+color: #000028; 
+width: 491px;
+height: 71px;
+font-size: 18px;
+font-family: 'IBMPlexMono';
+font-weight: 700;
+line-height: 23.4px;
+width: 491px;
+margin-left: 507px;
+justify-content: end;
     }
     .contenta {
     width: 314.96px;
@@ -150,21 +159,6 @@ p {
     line-height: 23.4px;
     text-align: left;
     color: #F1B2CE;
-    }
-    .dofamin {
-    padding-top: 0;
-    width: 648.92px;
-    height: 23px;
-    left: 355.08px;
-    gap: 0px;
-    opacity: 0px;
-    font-family: 'IBMPlexMono';
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 23.4px;
-    text-align: left;
-    color: #000028;
-    padding-top: 20px;
     }
     .texta {
     width: 648.92px;
@@ -304,28 +298,26 @@ p {
     text-align: left;
     color: #F1B2CE;
     }
-    .container2 {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: Fixed 984px;
-    height: 431px;
-    top: 67px;
-    left: 20px;
-    gap: 20px;
-    opacity: 0px;
-    background-color: #000028;
-    }
+.container2 {
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+width: Fixed 984px;
+height: 431px;
+top: 67px;
+left: 20px;
+gap: 20px;
+opacity: 0px;
+background-color: #000028;
+}
     .container {
-        background-color: #000028;
-        background-size: cover;
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-    }
+background-color: #000028;
+background-size: cover;
+display: flex;
+flex-direction: column;
+flex-wrap: wrap;
+}
 .group p {
-width: 315px;
-height: 98px;
 left: 20px;
 gap: 0;
 font-family: 'IBM Plex Mono';
@@ -336,7 +328,7 @@ text-align: left;
 color: #FF0070;
 }
 .group h3 {
-    display: flex;
+display: flex;
 width: 649px;
 height: 23px;
 gap: 0;
@@ -353,11 +345,17 @@ left: 355px;
 gap: 0;
 }
 .group {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
 }
-.contentb h3 {
+.contentb {
+display: flex;
+flex-direction: column;
+flex-wrap: wrap;
+
+}
+.goochi h3 {
 width: 649px;
 height: 23px;
 top: 43px;
@@ -375,4 +373,228 @@ top: 43px;
 left: 355px;
 gap: 0;
 }
-
+.goochi p {
+display: flex;
+flex-direction: column;
+flex-wrap: wrap;
+width: 647.55px;
+height: 211px;
+top: 76px;
+gap: 0;
+font-family: 'IBM Plex Mono';
+font-size: 18px;
+font-weight: 400;
+line-height: 23.4px;
+text-align: left;
+color: #F1B2CE;
+}
+.goochi {
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+}
+.content5 p {
+width: 649px;
+height: 117px;
+top: 340px;
+gap: 0;
+font-family: 'IBM Plex Mono';
+font-size: 18px;
+font-weight: 400;
+line-height: 23.4px;
+text-align: left;
+color: #F1B2CE;
+}
+.content5 h3 {
+width: 649px;
+height: 23px;
+top: 307px;
+gap: 0;
+font-family: 'IBM Plex Mono';
+font-size: 18px;
+font-weight: 400;
+line-height: 23.4px;
+text-align: left;
+color: #000028;
+background-color: #FF0070;
+}
+.content6 h3 {
+width: 649px;
+height: 23px;
+top: 477px;
+gap: 0;
+font-family: 'IBM Plex Mono';
+font-size: 18px;
+font-weight: 400;
+line-height: 23.4px;
+text-align: left;
+color: #000028;
+background-color: #FF0070;
+}
+.content6 p {
+width: 649px;
+height: 164px;
+top: 510px;
+gap: 0;
+font-family: 'IBM Plex Mono';
+font-size: 18px;
+font-weight: 400;
+line-height: 23.4px;
+text-align: left;
+color: #F1B2CE;
+}
+.content7 h3 {
+width: 649px;
+height: 23px;
+top: 694px;
+gap: 0;
+font-family: 'IBM Plex Mono';
+font-size: 18px;
+font-weight: 400;
+line-height: 23.4px;
+text-align: left;
+color: #000028;
+background-color: #FF0070;
+}
+.content7 p {
+width: 649px;
+height: 118px;
+top: 727px;
+gap: 0;
+font-family: 'IBM Plex Mono';
+font-size: 18px;
+font-weight: 400;
+line-height: 23.4px;
+text-align: left;
+color: #F1B2CE;
+}
+.content8 h3 {
+width: 649px;
+height: 23px;
+top: 865px;
+gap: 0;
+font-family: 'IBM Plex Mono';
+font-size: 18px;
+font-weight: 400;
+line-height: 23.4px;
+text-align: left;
+color: #000028;
+background-color: #FF0070;
+}
+.content8 p {
+width: 649px;
+height: 117px;
+top: 898px;
+gap: 0;
+font-family: 'IBM Plex Mono';
+font-size: 18px;
+font-weight: 400;
+line-height: 23.4px;
+text-align: left;
+color: #F1B2CE;
+}
+.allinfo {
+background-color: #000028;
+display: flex;
+flex-direction: column;
+flex-wrap: wrap;
+width: 1024;
+}
+.galleri p {
+width: 984px;
+height: 23px;
+margin: -20px;
+gap: 0;
+font-family: 'IBM Plex Mono';
+font-size: 18px;
+font-weight: 700;
+line-height: 23.4px;
+text-align: left;
+color: #000028;
+background-color: #FF0070;
+}
+.foto1 {
+object-fit: cover;
+grid-column-start: 1;
+grid-column-end: 3;
+grid-row-start: 1;
+grid-row-end: 3;
+width: 649px;
+height: 260px;
+padding-top: 43px;
+padding-left: 20.24px;
+gap: 0;
+}
+.foto2 {
+object-fit: cover;
+grid-column-start: 1;
+grid-column-end: 3;
+grid-row-start: 1;
+grid-row-end: 3;
+width: 315px;
+height: 595px;
+padding-top: 43px;
+padding-left: 689px;
+padding-bottom: 1000px;
+}
+.foto3 {
+object-fit: cover;
+grid-column-start: 1;
+grid-column-end: 3;
+grid-row-start: 1;
+grid-row-end: 3;
+width: 649px;
+height: 428px;
+padding-top: 663px;
+padding-left: 355px;
+gap: 0;
+}
+.foto4 {
+object-fit: cover;
+grid-column-start: 1;
+grid-column-end: 3;
+grid-row-start: 1;
+grid-row-end: 3;
+width: 315px;
+height: 768px;
+padding-top: 323px;
+padding-left: 20.24px;
+gap: 0;
+}
+.foto5 {
+object-fit: cover;
+width: 315px;
+height: 315px;
+padding-top: 323px;
+padding-left: 355px;
+gap: 0;
+grid-column-start: 1;
+grid-column-end: 3;
+grid-row-start: 1;
+grid-row-end: 3;
+} 
+.galleri {
+display: grid;
+grid-template-columns: repeat(8, 1fr);
+grid-template-rows: repeat(8, 1vw);
+grid-gap: 20px;
+width:  1024px;
+height:  1091px;
+margin: 0 auto;
+background-color: #000028;
+}
+footer {
+width: 1024px;
+height: 130px;
+padding-top: 319px;
+padding-left: 1070px;
+gap: 0;
+font-family: 'IBM Plex Mono';
+font-size: 157px;
+font-weight: 700;
+line-height: 129.53px;
+text-align: left;
+color: #DB00FF;
+text-shadow: 2px 2px #FF0070;
+background-color: #000028;
+}
