--- a/style.css
+++ b/style.css
@@ -1,600 +1,94 @@
-@font-face {
-    font-family: 'IBMPlexMono';
-    src: url(./fonts/IBMPlexMono-Bold.ttf);
-    font-weight: 700px;
- }
- @font-face {
-    font-family: 'IBMPlexMono';
-    src: url(./fonts/IBMPlexMono-Regular.ttf);
-    font-weight: 400;
- }
- .allmain {
-    width: 1024px;
-    margin: 0 auto;
-    font-family: 'IBMPlexMono' sans-serif;
- }
- header {
-    background-image: url("./image.png");
-    margin: 0;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
- }
- .button {
-    background-color: transparent;
-    border: none;
-    color: #ff0070;
-    font-size: 18px;
-    font-family: 'IBMPlexMono';
-    margin-top: 20px;
-    margin-right: 25px;
-    text-align: center;
-    cursor: pointer;
- }
-.navigation {
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Karla+Tamil+Upright:wght@400;700&display=swap');
+.kukushka {
     display: flex;
+    justify-content: space-between;
+    padding: 10px 25px;
+    height: 60px;
+    background-color: red;
     justify-content: left;
     gap: 10px;
-    margin-left: 340px;
-    font-family: 'IBMPlexMono';
-}
-.button:hover {
-    cursor: pointer;
-}
-.isActiveButton {
-    border: 1px solid #ff0070;
-    background-color: transparent;
-    color: #ff0070;
-    font-size: 18px;
-    font-family: 'IBMPlexMono';
-    margin-top: 20px;
-    margin-right: 30px;
-}
-.title h1 {
-position: flex;
-width: 759px;
-height: 130px;
-left: 0;
-top: cacl(50% - 130px/2);
-font-style: bold;
-font-weight: 700;
-font-size: 157px;
-line-height: 82.5%;
-color: #DB00FF;
-text-shadow: 4px 4px #ff0070;
-font-family: 'IBMPlexMono';
-margin-top: 300px;
-font-size: 157px;
-font-weight: 700;
-line-height: 129.53px;
-text-align: left;
-width: 750px;
-height: 130px;
-background-color: transparent;
-width: 1024px;
-}
-.globalinfo {
-    width: 1024px;
-    height: 465px;
-}
-.title p {
-    position: absolute;
-    width: 33px;
-    height: 26px;
-    padding-left: 943px;
-    top: 20px;
-    font-family: 'IBMPlexMono';
-    font-style: normal;
-    font-weight: 400px;
-    font-size: 18px;
-    line-height: 25px;
-    text-align: right;
-    color: #ff0070;
-}
-.ellipse {
-width: 9px;
-height: 9px;
-position: absolute;
-margin-left: 986px;
-top: 28px;
-background: #ff0070;
-border-radius: 50%;
-box-shadow:  0 0 4px 2px #ff0070;
-font-family: 'IBMPlexMono';
-} 
-p {
-    margin: 0;
-}
-.content {
-display: block;
-background-color: #ff0070;
-color: #000028; 
-width: 491px;
-height: 71px;
-font-size: 18px;
-font-family: 'IBMPlexMono';
-font-weight: 700;
-line-height: 23.4px;
-width: 491px;
-margin-left: 507px;
-justify-content: end;
-    }
-    .contenta {
-    width: 314.96px;
-    height: 47px;
-    left: 20px;
-    gap: 0px;
-    opacity: 0px;
-    font-family: 'IBMPlexMono';
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 23.4px;
-    text-align: left;
-    margin-top: 50px;
-    color: #FF0070;
-    }
-    h2 {
-    display: flex;
-    width: 649px;
-    height: 23px;
-    padding-left:  354.89px;  
-    font-family: 'IBMPlexMono';
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 23.4px;
-    text-align: left;
-    color: #000028;
-    background-color: #FF0070;
-    }
-    .text {
-    width: 648.92px;
-    height: 211px;
-    padding-top: 0;
-    padding-left: 354.89px;
-    gap: 0px;
-    opacity: 0px;
-    font-family: 'IBMPlexMono';
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 23.4px;
-    text-align: left;
-    color: #F1B2CE;
-    }
-    .texta {
-    width: 648.92px;
-    height: 211px;
-    padding-left: 355.08px;
-    gap: 0px;
-    opacity: 0px;
-    font-family: 'IBMPlexMono';
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 23.4px;
-    text-align: left;
-    color: #F1B2CE;
-    }
-    .title3 {
-    width: 315px;
-    height: 47px;
-    left: 20px;
-    gap: 0px;
-    font-family: 'IBM Plex Mono';
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 23.4px;
-    text-align: left;
-    color: #FF0070;
-    background-color: #000028;
     width: 100%;
-    }
-    .mnogozadachnost h3 {
-    width: 315px;
-    height: 23px;
-    gap: 0;
-    font-family: 'IBM Plex Mono';
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 23.4px;
-    text-align: left;
-    color: #000028;
-    width: 315px;
-    height: 23px;
-    top: 67px;
-    left: 20px;
-    gap: 0;
-    background-color: #FF0070;
-    }
-    .mnogozadachnost h3 {
-    width: 315px;
-    height: 23px;
-    gap: 0;
-    font-family: 'IBM Plex Mono';
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 23.4px;
-    text-align: left;
-    color: #000028;
-    width: 315px;
-    height: 23px;
-    top: 67px;
-    left: 20px;
-    gap: 0;
-    background-color: #FF0070;
-    }
-    .mnogozadachnost p {
-    width: 315px;
-    height: 351px;
+    align-items: center;
+   text-decoration: none;
+}
+.kukushka img {
+height: 35px;
+}
+body {
+    margin: 0;
+    font-family: Karla Tamil Upright, sans-serif;
+   
+   
+}
+.main {
     padding-top: 10px;
-    gap: 0px;
-    font-family: 'IBM Plex Mono';
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 23.4px;
-    text-align: left;
-    color: #F1B2CE;
-    }
-    .eat h3 {
-    width: 315px;
-    height: 23px;
-    left: 335px;
-    gap: 0;
-    font-family: 'IBM Plex Mono';
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 23.4px;
-    text-align: left;
-    color: #000028;
-    background-color: #FF0070;
-    width: 315px;
-    height: 23px;
-    top: 67px;
-    left: 355px;
-    gap: 0;
-    
-    }
-    .eat p {
-    width: 315px;
-    height: 328px;
-    top: 33px;
-    left:
-    335px;
-    gap:
-    0;
-    font-family: 'IBM Plex Mono';
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 23.4px;
-    text-align: left;
-    color: #F1B2CE;
-    }
-    .gadzheti h3 {
-    width: 315px;
-    height: 23px;
-    left: 670px;
-    gap: 0;
-    font-family: 'IBM Plex Mono';
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 23.4px;
-    text-align: left;
-    color: #000028;
-    width: 315px;
-    height: 23px;
-    top: 67px;
-    left: 689px;
-    gap: 0;
-    background-color: #FF0070;
-    }
-    .gadzheti p {
-    width: 315px;
-    height: 398px;
-    top: 33px;
-    left: 670px;
-    gap: 0;
-    font-family: 'IBM Plex Mono';
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 23.4px;
-    text-align: left;
-    color: #F1B2CE;
-    }
-.container2 {
-display: flex;
-flex-direction: row;
-flex-wrap: wrap;
-width: Fixed 984px;
-height: 431px;
-top: 67px;
-left: 20px;
-gap: 20px;
-opacity: 0px;
-background-color: #000028;
+    display: flex;
+    align-items: center;
+   gap: 20px;
+   background-color: red;
+   height: 60px;
 }
-    .container {
-background-color: #000028;
-background-size: cover;
-display: flex;
-flex-direction: column;
-flex-wrap: wrap;
+.main > a {
+    text-decoration: none;
+    color: black;
+    justify-content: right;
 }
-.group p {
-left: 20px;
-gap: 0;
-font-family: 'IBM Plex Mono';
-font-size: 18px;
-font-weight: 700;
-line-height: 23.4px;
-text-align: left;
-color: #FF0070;
+.header {
+    display: flex;
 }
-.group h3 {
-display: flex;
-width: 649px;
-height: 23px;
-gap: 0;
-font-family: 'IBM Plex Mono';
-font-size: 18px;
-font-weight: 700;
-line-height: 23.4px;
-text-align: left;
-color: #000028;
-background-color: #FF0070;
-width: 649px;
-height: 23px;
-left: 355px;
-gap: 0;
+.main img {
+    height: 50px;
+    justify-content: right;
+    width: 50px;
 }
-.group {
-display: flex;
-flex-direction: row;
-flex-wrap: wrap;
+.gg  {
+    display: block;
+    padding-top: 0;
+    background-color: red;
 }
-.contentb {
-display: flex;
-flex-direction: column;
-flex-wrap: wrap;
+.knopochka {
+display: none;
+position: absolute;
+}
+.gg:hover .knopochka {
+    display: block;
+    background-color: red;
+    padding-top: 25px;
+}
+.reg {
+    display: flex;
+    padding-top: 300px;
+    font-size: 60px;
+    font-weight: bold;
+    height: 50px;
+    width: 100%;
+}
 
-}
-.goochi h3 {
-width: 649px;
-height: 23px;
-top: 43px;
-gap: 0;
-font-family: 'IBM Plex Mono';
-font-size: 18px;
-font-weight: 400;
-line-height: 23.4px;
-text-align: left;
-color: #000028;
-background-color: #FF0070;
-width: 649px;
-height: 23px;
-top: 43px;
-left: 355px;
-gap: 0;
-}
-.goochi p {
-display: flex;
-flex-direction: column;
-flex-wrap: wrap;
-width: 647.55px;
-height: 211px;
-top: 76px;
-gap: 0;
-font-family: 'IBM Plex Mono';
-font-size: 18px;
-font-weight: 400;
-line-height: 23.4px;
-text-align: left;
-color: #F1B2CE;
-}
-.goochi {
-display: flex;
-flex-direction: row;
-flex-wrap: wrap;
-}
-.content5 p {
-width: 649px;
-height: 117px;
-top: 340px;
-gap: 0;
-font-family: 'IBM Plex Mono';
-font-size: 18px;
-font-weight: 400;
-line-height: 23.4px;
-text-align: left;
-color: #F1B2CE;
-}
-.content5 h3 {
-width: 649px;
-height: 23px;
-top: 307px;
-gap: 0;
-font-family: 'IBM Plex Mono';
-font-size: 18px;
-font-weight: 400;
-line-height: 23.4px;
-text-align: left;
-color: #000028;
-background-color: #FF0070;
-}
-.content6 h3 {
-width: 649px;
-height: 23px;
-top: 477px;
-gap: 0;
-font-family: 'IBM Plex Mono';
-font-size: 18px;
-font-weight: 400;
-line-height: 23.4px;
-text-align: left;
-color: #000028;
-background-color: #FF0070;
-}
-.content6 p {
-width: 649px;
-height: 164px;
-top: 510px;
-gap: 0;
-font-family: 'IBM Plex Mono';
-font-size: 18px;
-font-weight: 400;
-line-height: 23.4px;
-text-align: left;
-color: #F1B2CE;
-}
-.content7 h3 {
-width: 649px;
-height: 23px;
-top: 694px;
-gap: 0;
-font-family: 'IBM Plex Mono';
-font-size: 18px;
-font-weight: 400;
-line-height: 23.4px;
-text-align: left;
-color: #000028;
-background-color: #FF0070;
-}
-.content7 p {
-width: 649px;
-height: 118px;
-top: 727px;
-gap: 0;
-font-family: 'IBM Plex Mono';
-font-size: 18px;
-font-weight: 400;
-line-height: 23.4px;
-text-align: left;
-color: #F1B2CE;
-}
-.content8 h3 {
-width: 649px;
-height: 23px;
-top: 865px;
-gap: 0;
-font-family: 'IBM Plex Mono';
-font-size: 18px;
-font-weight: 400;
-line-height: 23.4px;
-text-align: left;
-color: #000028;
-background-color: #FF0070;
-}
-.content8 p {
-width: 649px;
-height: 117px;
-top: 898px;
-gap: 0;
-font-family: 'IBM Plex Mono';
-font-size: 18px;
-font-weight: 400;
-line-height: 23.4px;
-text-align: left;
-color: #F1B2CE;
-}
-.allinfo {
-background-color: #000028;
-display: flex;
-flex-direction: column;
-flex-wrap: wrap;
-width: 1024;
-}
-.galleri p {
-width: 984px;
-height: 23px;
-margin: -20px;
-gap: 0;
-font-family: 'IBM Plex Mono';
-font-size: 18px;
-font-weight: 700;
-line-height: 23.4px;
-text-align: left;
-color: #000028;
-background-color: #FF0070;
-}
-.foto1 {
-object-fit: cover;
-grid-column-start: 1;
-grid-column-end: 3;
-grid-row-start: 1;
-grid-row-end: 3;
-width: 649px;
-height: 260px;
-padding-top: 43px;
-padding-left: 20.24px;
-gap: 0;
-}
-.foto2 {
-object-fit: cover;
-grid-column-start: 1;
-grid-column-end: 3;
-grid-row-start: 1;
-grid-row-end: 3;
-width: 315px;
-height: 595px;
-padding-top: 43px;
-padding-left: 689px;
-padding-bottom: 1000px;
-}
-.foto3 {
-object-fit: cover;
-grid-column-start: 1;
-grid-column-end: 3;
-grid-row-start: 1;
-grid-row-end: 3;
-width: 649px;
-height: 428px;
-padding-top: 663px;
-padding-left: 355px;
-gap: 0;
-}
-.foto4 {
-object-fit: cover;
-grid-column-start: 1;
-grid-column-end: 3;
-grid-row-start: 1;
-grid-row-end: 3;
-width: 315px;
-height: 768px;
-padding-top: 323px;
-padding-left: 20.24px;
-gap: 0;
-}
-.foto5 {
-object-fit: cover;
-width: 315px;
-height: 315px;
-padding-top: 323px;
-padding-left: 355px;
-gap: 0;
-grid-column-start: 1;
-grid-column-end: 3;
-grid-row-start: 1;
-grid-row-end: 3;
-} 
-.galleri {
-display: grid;
-grid-template-columns: repeat(8, 1fr);
-grid-template-rows: repeat(8, 1vw);
-grid-gap: 20px;
-width:  1024px;
-height:  1091px;
-margin: 0 auto;
-background-color: #000028;
-}
-footer {
-width: 1024px;
-height: 130px;
-padding-top: 319px;
-padding-left: 1070px;
-gap: 0;
-font-family: 'IBM Plex Mono';
-font-size: 157px;
-font-weight: 700;
-line-height: 129.53px;
-text-align: left;
-color: #DB00FF;
-text-shadow: 2px 2px #FF0070;
-background-color: #000028;
-}
+  .container {
+    padding-top: 600px;
+  }
+  input[type=text], input[type=password] {
+    width: 100%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    display: inline-block;
+    border: none;
+    background: aqua;
+  }
+  input[type=text]:focus, input[type=password]:focus {
+    background-color: #ddd;
+    outline: none;
+  }
+ 
+  .registerbtn {
+    background-color: black;
+    color: aqua;
+    padding: 16px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    opacity: 0.9;
+  }
+
+  
